feat: manual auto-grouping with persistent mappings (v1.2.15)
- Add 'Auto Group' button in grouping view (right-aligned)
- Groups are now persisted in groupMappings config
- Click 'Auto Group' to recalculate groups based on current quota
- Fix: reprocess now re-decodes raw API response with latest config
- Fix: toggleGrouping/renameGroup now use reprocess instead of syncTelemetry
- This prevents incorrect grouping when all models have same quota after idle

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Antigravity Cockpit",
   "icon": "assets/icon.png",
   "description": "A premium, dashboard-style quota monitor for Antigravity AI.",
-  "version": "1.2.14",
+  "version": "1.2.15",
   "publisher": "jlcodes",
   "engines": {
     "vscode": "^1.90.0"
@@ -135,6 +135,11 @@
           },
           "default": [],
           "description": "User-defined order of groups in the dashboard."
+        },
+        "agCockpit.groupMappings": {
+          "type": "object",
+          "default": {},
+          "description": "Model to group mappings. Used to persist group assignments. Click 'Auto Group' to recalculate based on current quota."
         }
       }
     },
